# ninstall

./: CMakeLists.txt  manage-op.c  manage-op.h  ninstall.c  ninstall.h  op.c  op.h
include/: argop.h
lib/: libargop.so.2
